--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,28 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 100vw;
+  max-height: 100dvh;
+  height: 100dvh;
+  width: 100vw;
+  margin: 0;
+  display: grid;
+  grid-template-areas: "sidebar main";
+  grid-template-columns: 112px 1fr;
+  gap: 0;
+}
+
+aside {
+  box-sizing: border-box;
+  width: 112px;
+  max-height: 100dvh;
+  grid-area: "sidebar";
+  color: black;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 0 21.1px 3px rgba(0, 0, 0, 0.25);
+  padding-block-start: 80px;
+  padding-block-end: 24px;
+  padding-inline: 24px;
 }
