--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,15 @@
   height: 100dvh;
   width: 100vw;
   margin: 0;
-  display: grid;
-  grid-template-areas: "sidebar main";
-  grid-template-columns: 112px 1fr;
-  gap: 0;
+  display: flex;
 }
 
 aside {
+  position: fixed;
+  height: 100%;
   box-sizing: border-box;
   width: 112px;
   max-height: 100dvh;
-  grid-area: "sidebar";
   color: black;
   background-color: white;
   display: flex;
