--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --font-family-tech: "JetBrains Mono", monospace;
+  --muted-grey: #7f7f7f;
+}
+
+* {
+  margin: 0;
 }
 
 body {
@@ -23,28 +30,46 @@ body {
   min-height: 100vh;
 }
 
+.tech-stack-container {
+  font-family: var(--font-family-tech);
+  letter-spacing: 8px;
+  font-size: 20px;
+  color: var(--muted-grey);
+  padding-inline: 10px;
+  padding-block: 24px;
+  border-block: 0.5px solid var(--muted-grey);
+}
+
 main {
   height: 100dvh;
+  margin-inline-start: 112px;
 }
 
 h1 {
   font-size: 80px;
+  line-height: 97px;
   font-weight: 500;
+  inline-size: 15ch;
 }
 
 p {
   font-size: 24px;
+  inline-size: 37ch;
 }
 
 .logo {
+  height: fit-content;
   font-size: 14px;
-  font-family: "JetBrains Mono", monospace;
+  font-family: var(--font-family-tech);
   writing-mode: vertical-rl;
   text-orientation: mixed;
   transform: rotate(180deg);
 }
 
 .hero-section {
+  display: flex;
+  flex-direction: column;
+  gap: 140px;
   box-sizing: border-box;
   color: black;
   padding: 10rem;
@@ -52,11 +77,33 @@ p {
   height: 100dvh;
 }
 
+.profile-img {
+  position: absolute;
+  bottom: 0;
+  right: 50px;
+  width: 457px;
+  border-radius: 8px;
+  transform: rotate(-6deg) translateY(24px);
+  box-shadow: 0 4px 50px 4px rgba(0, 0, 0, 0.25);
+}
+
+.hero-header {
+  display: flex;
+  flex-direction: column;
+  gap: 54px;
+}
+
 .sidebar-button-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 32px;
+}
+
+.primary-button {
+  font-size: 24px;
+  border-radius: 99999px;
+  border: 1px solid black;
 }
 
 button {
