--- a/src/index.css
+++ b/src/index.css
@@ -1,128 +1,27 @@
-:root {
-  font-family: var(--font-family-general);
-  line-height: 1.5;
-  font-weight: 400;
+@import "tailwindcss";
+@theme {
+  /* font */
+  --font-tech: "JetBrains Mono", monospace;
+  --font-general: "Inter", sans-serif;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #ffffff;
+  /* color */
+  --muted-grey: #7f7f7f;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --button-primary-padding: 24px;
+  --writing-normal: horizontal-tb;
+  --writing-vertical: vertical-lr;
+  --writing-vertical-reverse: vertical-rl;
+  --writing-sideways: sideways-lr;
+  --writing-sideways-reverse: sideways-rl;
 }
 
-* {
-  margin: 0;
+@utility writing-* {
+  writing-mode: --value(--writing-*);
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-main {
-  height: 100dvh;
-  margin-inline-start: 112px;
-}
-
-h1 {
-  font-size: 80px;
-  line-height: 97px;
-  font-weight: 500;
-  inline-size: 15ch;
-}
-
-p {
-  font-size: 24px;
-  inline-size: 37ch;
-}
-
-.logo {
-  height: fit-content;
-  font-size: 14px;
-  font-family: var(--font-family-tech);
-  writing-mode: vertical-rl;
-  text-orientation: mixed;
-  transform: rotate(180deg);
-}
-
-.hero-section {
-  display: flex;
-  flex-direction: column;
-  gap: 140px;
-  box-sizing: border-box;
-  color: black;
-  padding: 10rem;
-  width: 100%;
   height: 100dvh;
 }
-
-.profile-img {
-  position: absolute;
-  bottom: 0;
-  right: 50px;
-  width: 457px;
-  border-radius: 8px;
-  transform: rotate(-6deg) translateY(24px);
-  box-shadow: 0 4px 50px 4px rgba(0, 0, 0, 0.25);
-}
-
-.hero-header {
-  display: flex;
-  flex-direction: column;
-  gap: 54px;
-}
-
-.sidebar-button-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 32px;
-}
-
-.primary-button {
-  font-size: 24px;
-  border-radius: 99999px;
-  border: 1px solid black;
-}
-
-button {
-  display: flex;
-  width: fit-content;
-  border: none;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: transparent;
-  color: black;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  color: #20c6ff;
-}
-
-button:focus,
-button:focus-visible {
-  color: #20c6ff;
-  border-block-end: 1px solid #20c6ff;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.root {
+  height: 100dvh;
 }
