Universal box-sizing to border-box and enabled smooth scroll behavior

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,13 @@
   writing-mode: --value(--writing-*);
 }
 
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
 body {
   height: 100dvh;
 }
