added background to main

--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,42 @@
   } */
 }
 
+main {
+  background:
+  /* oben links – Lichtquelle */
+    radial-gradient(
+      2600px 1400px at -10% -20%,
+      rgba(255, 255, 255, 1) 53%,
+      rgba(210, 228, 255, 0.1) 55%
+    ),
+    #f7faff;
+
+  background-blend-mode: normal, normal, normal, soft-light;
+}
+
+@media (max-width: 640px) {
+  main {
+    background:
+  /* oben links – Lichtquelle */
+      radial-gradient(
+        1300px 700px at -30% 0%,
+        rgba(255, 255, 255, 1) 53%,
+        rgba(210, 228, 255, 0.1) 55%
+      ),
+      #f7faff;
+
+    background-blend-mode: normal, normal, normal, soft-light;
+  }
+}
+
+section {
+  height: 100dvh;
+}
+
+aside {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
 @layer utilities {
   /* colors */
   .text-muted {
